fixed visiblity toggling

--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ p {
 }
 #outer {
     position: relative;
-    width: 1020px;
+    width: 1040px;
 }
 #line_chart {
     position: absolute;
